# heapsozz

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  haxelib.json
extension/: animation.cpp  animation.h  mesh.cpp  mesh.h  model.cpp  model.h  ozz.cpp  sampling_job.cpp  skeleton.cpp  skeleton.h  utils.cpp  utils.h
haxe_libraries/: heaps.hxml  webidl.hxml
ozz/: Generator.hx  Native.hx  Ozz.hx  OzzLibrary.hx  OzzMesh.hx  OzzModel.hx  OzzPrim.hx  OzzSkinShader.hx  ozz.idl
sample/: Main.hx  ozz.js  ozz.wasm  res.pak  sample.html  sample.hxml  sample.js  sample_js.hxml
